fix profile section text alignment

--- a/main.css
+++ b/main.css
@@ -240,7 +240,7 @@ div.committee {
   margin-bottom: 10px;
 }
 
-#steering-committee {
+.profile-list {
   text-align: center;
 }
 
